# tomgoring.co.uk-api

./: .drone.yml  Cargo.toml  Dockerfile  Jenkinsfile  rustfmt.toml  schema.sql
src/: main.rs
src/todo/: model.rs  routes.rs
