[package]
name = "todo-api"
version = "0.1.0"
authors = ["Tom Goring <mail@tomgoring.co.uk>"]
edition = "2018"

[dependencies]
listenfd = "0.3.3"
actix-web = "2.0.0"
actix-rt = "1.1.1"
serde = "1.0.111"
serde_json = "1.0.55"
sqlx = { version = "0.3.5", features = [ "postgres" ] }
futures = "0.3.5"
dotenv = "0.15.0"
anyhow = "1.0.31"
log = "0.4.8"
actix-cors = "0.2.0"
env_logger = "0.7.1"
